Added gitignore file

--- a/0x01-git/.gitignore
+++ b/0x01-git/.gitignore
@@ -39,6 +39,9 @@ config.ini
 secrets.txt
 credentials.json
 
+# Ignore backup file
+*~ 
+
 # Ignore deployment and environment-specific files
 .env
 .env.local
